--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 </head>
   <body class="bg-gray-900 text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
